# practice_rag

./: .gitignore  README.md  pyproject.toml
app/: chain.py  chat.py  rag_chat.py  server.py  server_stream_response.py  streamlit_server.py  streamlit_server_rerank.py
app/static/: index.html
convertor/: document_convertor.py
load_data/: pdf_loader.py
model/: embedding_model.py  ollama_llm_model.py  openai_embeddings_model.py  remote_embedding_model.py  remote_llm_model.py
prompt/: senario_prompt.py
retriever/: rerank_retriever.py
splitter/: text_splitter.py
test/: delete_collections.py  document_preprocessing_test.py  load_test.py  question_test.py  remote_llm_chat_test.py
test/chroma_db/: chroma.sqlite3
vector_store/: chroma_db.py
