[tool.poetry]
name = "safely-biz-test"
version = "0.1.0"
description = ""
authors = ["jiyong.yoon <jyyoon0615@naver.com>"]
readme = "README.md"
packages = [{include = "safely_biz_test"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.5"
langchain-community = "^0.2.5"
langchain-core = "^0.2.8"
langchain-experimental = "^0.0.61"
langchain-google-genai = "^1.0.6"
langchain-text-splitters = "^0.2.1"
langserve = "^0.2.2"
langsmith = "^0.1.79"
chromadb = "^0.5.2"
huggingface-hub = "^0.23.4"
pypdf = "^4.2.0"
tiktoken = "^0.7.0"
sentence-transformers = "^3.0.1"
langchain-huggingface = "^0.0.3"
#torch = { version = "*", source = "pytorch" }
#torchvision = { version = "*", source = "pytorch" }
#torchaudio = { version = "*", source = "pytorch" }

#[[tool.poetry.source]]
#name = "pytorch"
#url = "https://download.pytorch.org/whl/cu121"
#priority = "secondary"
torch = "^2.3.1"
torchvision = "^0.18.1"
torchaudio = "^2.3.1"
langchain-openai = "^0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
